feat: create user with task_type list
